--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,6 +1,18 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-    <h1 class="ui header">404</h1>
-    <h3 class="ui header">Page not found</h3>
+
+   	
+<div class="ui text container">
+ <div class="ui placeholder segment">
+  <div class="ui icon header">
+   <h1>404</h1>
+    <i class="user md icon"></i>
+    <h1> Page not found</h1>
+	<h3>You are either trying to access a protected page or the page doesn't exit. Use navigation bar to go back. </h3>
+  </div>
+
+</div>
+</div>
+
 {% endblock %}
