--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -2,5 +2,17 @@
 
 {% block content %}
     <h1 class="ui header">500</h1>
-    <h3 class="ui header">Internal Server Error</h3>
+    <h3 class="ui header"></h3>
+	
+<div class="ui text container">
+ <div class="ui placeholder segment">
+  <div class="ui icon header">
+   <h1>500</h1>
+    <i class="user md icon"></i>
+    <h1>Internal Server Error</h1>
+	<h3>Sorry, we will fix it. Please use the navigation bar to go back items. </h3>
+  </div>
+
+</div>
+</div>
 {% endblock %}
