--- a/app/templates/errors/403.html
+++ b/app/templates/errors/403.html
@@ -1,6 +1,17 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-    <h1 class="ui header">403</h1>
-    <h3 class="ui header">Forbidden</h3>
+	
+<div class="ui text container">
+ <div class="ui placeholder segment">
+  <div class="ui icon header">
+   <h1>403</h1>
+    <i class="user md icon"></i>
+    <h1>Forbidden</h1>
+	<h3>You are either trying to access a protected page or the page doesn't exit. Use navigation bar to go back. </h3>
+  </div>
+
+</div>
+</div>
+
 {% endblock %}
