--- a/app/templates/project/project_dashboard.html
+++ b/app/templates/project/project_dashboard.html
@@ -56,14 +56,11 @@
                             <td>{{ u.id }}</td>
                             <td>{{ u.name }}</td>
                             <td>
-                                <a class="ui blue left floated button" href="{{ url_for('project.edit_project', project_id=u.id, name=u.name) }}">Edit</a>
+                                <a class="ui blue left floated button" href="{{ url_for('project.edit_project', project_id=u.id, name=u.name) }}">Edit details</a>
                                 <!---<a class="ui red left floated button" style="margin-top: 1px"
                                    href="{# url_for('project.delete_project', project_id=u.id) #}" onclick="return confirmDeleteProject('{{ project.id }}');" data-content="{{ project.id }}">Delete</a>--->						
                             </td>
-							{% if u.project_id >= 10 %}
-							{% else %}
-                            <td><a class="ui teal right floated button" href="{{ url_for('question.new_question', org_id=org.id, project_id=u.id) }}">Create New Question</a></td>
-							{% endif %}
+                            <td><a class="ui teal right floated button" href="{{ url_for('project.project_details', project_id=u.id, name=u.name) }}">View details</a></td>
                         </tr>
                     {% endfor %}
                     </tbody>
