--- a/app/templates/question/create_question.html
+++ b/app/templates/question/create_question.html
@@ -11,7 +11,7 @@
         <div class="twelve wide column">
                 <a class="ui basic compact button" href="{{ url_for('question.index') }}">
                 <i class="caret left icon"></i>
-                Back to "{{ org.org_name }}" Questions' List
+                Back to Questions' List
             </a>
             <h2 class="ui header">
                 Create a new question
