--- a/app/templates/project/project_details.html
+++ b/app/templates/project/project_details.html
@@ -35,8 +35,11 @@
             </h2>
             <div class="ui header" style="width: 100%; height: 50px">
                 <a class="ui teal left floated button" href="{{ url_for('project.index') }}">Create New Project</a>
+				
+				{% if question.id | length > 10 %} <!----limit to only 10 questions per project --->
+				{% else %}
 				<td><a class="ui teal right floated button" href="{{ url_for('question.new_question', project_id=project_id) }}">Add Question</a></td>
-
+                {% endif %}
 			</div>
             {# Use overflow-x: scroll so that mobile views don't freak out
              # when the table is too wide #}
