--- a/app/templates/admin/blog/index.html
+++ b/app/templates/admin/blog/index.html
@@ -22,19 +22,16 @@
 
 {% block content %}
     <div class="ui stackable centered grid container">
+        <div class="four wide column">
+            {# include 'admin/partials/nav.html' #}
+        </div>
         <div class="twelve wide column">
             <h2 class="ui header">
-                Admin Dashboard
+                Admin Blog Dashboard
             </h2>
             <div class="ui two column stackable grid">
-                {{ dashboard_option('Registered Users', 'admin.registered_users',
-                                    description='View and manage user accounts', icon='users icon') }}
-                {{ dashboard_option('Add New User', 'admin.new_user',
-                                    description='Create a new user account', icon='add user icon') }}
-                {{ dashboard_option('Invite New User', 'admin.invite_user',
-                                    description='Invites a new user to create their own account', icon='add user icon') }}
-                {{ dashboard_option('Blog Management', 'admin.blog_index',
-                                    description='View and manage Blog Area', icon='blogger icon') }}
+                {% include 'admin/blog/partials/nav.html' %}
+
             </div>
         </div>
     </div>
