--- a/app/templates/public/temp.html
+++ b/app/templates/public/temp.html
@@ -78,7 +78,7 @@
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="#about" class="get-started-btn scrollto">Get Started</a>
+      <a href="{{ url_for('account.register') }}" class="get-started-btn scrollto">Get Started</a>
 
     </div>
   </header><!-- End Header -->
@@ -92,39 +92,39 @@
         </div>
       </div>
       <div class="text-center">
-        <a href="#about" class="btn-get-started scrollto">Get Started</a>
+        <a href="{{ url_for('account.register') }}" class="btn-get-started scrollto">Get Started</a>
       </div>
 
       <div class="row icon-boxes">
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
-            <div class="icon"><i class="ri-stack-line"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <div class="icon"><i class="ri-currency-line"></i></div>
+            <h4 class="title"><a href="">Competitive Market Analysis</a></h4>
+            <p class="description">Use our service to analyze and understand your direct or indirect competitors in any state in Nigeria</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
-            <div class="icon"><i class="ri-palette-line"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <div class="icon"><i class="ri-shirt-fill"></i></div>
+            <h4 class="title"><a href="">Product Research</a></h4>
+            <p class="description">Understand what your customers really want so you can tailor your products to match the needs in any state in Nigeria</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="400">
           <div class="icon-box">
-            <div class="icon"><i class="ri-command-line"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+            <div class="icon"><i class="ri-numbers-fill"></i></div>
+            <h4 class="title"><a href="">Market Trend Analysis</a></h4>
+            <p class="description">Do you need trend analysis to obtain insights on the market scenario and consumer preferences in the 36 states of Nigeria?</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="500">
           <div class="icon-box">
-            <div class="icon"><i class="ri-fingerprint-line"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <div class="icon"><i class="ri-bar-chart-grouped-fill"></i></div>
+            <h4 class="title"><a href="">Data Analysis & Business Intelligence</a></h4>
+            <p class="description">Using our suite of BI & Data analysis tools and techniques, we analyse data from research respondents to offer you actionable insights.</p>
           </div>
         </div>
 
