--- a/app/templates/public/city.html
+++ b/app/templates/public/city.html
@@ -69,8 +69,8 @@
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
       <div class="row justify-content-center">
         <div class="col-xl-7 col-lg-9 text-center">
-          <h1>Market Research Service Provider in Nigeria</h1>
-          <h2>You ask the questions, we gather the data and unlock insights for your business, service or product in Nigeria.</h2>
+          <h1>Market Research Service Provider in {{ city }}</h1>
+          <h2>You ask the questions, we gather the data and unlock insights for your business, service or product in {{ city }}.</h2>
         </div>
       </div>
       <div class="text-center">
@@ -81,31 +81,31 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
             <div class="icon"><i class="ri-currency-line"></i></div>
-            <h4 class="title"><a href="">Competitive Market Analysis</a></h4>
-            <p class="description">Use our service to analyze and understand your direct or indirect competitors in any state in Nigeria</p>
+            <h4 class="title"><a href="">Competitive Market Analysis in {{ city }}</a></h4>
+            <p class="description">Use our service to analyze and understand your direct or indirect competitors in any state in {{ city }}</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
             <div class="icon"><i class="ri-shirt-fill"></i></div>
-            <h4 class="title"><a href="">Product Research</a></h4>
-            <p class="description">Understand what your customers really want so you can tailor your products to match the needs in any state in Nigeria</p>
+            <h4 class="title"><a href="">Product Research in {{ city }}</a></h4>
+            <p class="description">Understand what your customers really want so you can tailor your products to match the needs in any state in {{ city }}</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="400">
           <div class="icon-box">
             <div class="icon"><i class="ri-numbers-fill"></i></div>
-            <h4 class="title"><a href="">Market Trend Analysis</a></h4>
-            <p class="description">Do you need trend analysis to obtain insights on the market scenario and consumer preferences in the 36 states of Nigeria?</p>
+            <h4 class="title"><a href="">Market Trend Analysis in {{ city }}</a></h4>
+            <p class="description">Do you need trend analysis to obtain insights on the market scenario and consumer preferences in {{ city }}?</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="500">
           <div class="icon-box">
             <div class="icon"><i class="ri-bar-chart-grouped-fill"></i></div>
-            <h4 class="title"><a href="">Data Analysis & Business Intelligence</a></h4>
+            <h4 class="title"><a href="">Data Analysis & Business Intelligence in {{ city }}</a></h4>
             <p class="description">Using our suite of BI & Data analysis tools and techniques, we analyse data from research respondents to offer you actionable insights.</p>
           </div>
         </div>
@@ -115,42 +115,6 @@
   </section><!-- End Hero -->
 
   <main id="main">
-
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>About Us</h2>
-        </div>
-
-        <div class="row content">
-          <div class="col-lg-6">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-            </ul>
-          </div>
-          <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End About Section -->
-
-
-
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
@@ -198,7 +162,7 @@
                 <i class="bx bx-tachometer"></i>
               </div>
               <h4><a href="">Focus Groups</a></h4>
-              <p>Depending on the type of demand, we gather focus groups, interview them and present the findings.</p>
+              <p>Depending on the type of demand, we gather focus groups in {{ city }}, interview them and present the findings.</p>
             </div>
           </div>
 
@@ -208,7 +172,7 @@
                 <i class="bx bx-layer"></i>
               </div>
               <h4><a href="">Online Surveys</a></h4>
-              <p>We send out surveys via our online channels to respondents. We co-ordinate the process to ensure we reach minimum or maximum responses necessary. </p>
+              <p>We send out surveys via our online channels to respondents in {{ city }}. We co-ordinate the process to ensure we reach minimum or maximum responses necessary. </p>
             </div>
           </div>
 
@@ -217,8 +181,8 @@
               <div class="icon">
                 <i class="bx bx-slideshow"></i>
               </div>
-              <h4><a href="">Phone based - In depth Interviews</a></h4>
-              <p>Some qualitative research questionnaires required more sessions with respondents, we take this approach on a case by case basis.</p>
+              <h4><a href="">Phone based - In depth Interviews in {{ city }}</a></h4>
+              <p>Some qualitative research questionnaires required more sessions with respondents in {{ city }}, we take this approach on a case by case basis.</p>
             </div>
           </div>
 
@@ -227,7 +191,7 @@
               <div class="icon">
                 <i class="bx bx-arch"></i>
               </div>
-              <h4><a href="">Face to face - In depth Interviews</a></h4>
+              <h4><a href="">Face to face - In depth Interviews in {{ city }}</a></h4>
               <p>We use in-depth face to face interviews for gathering qualitative research data. These decisions are made on a case by case basis.  </p>
             </div>
           </div>
@@ -331,62 +295,55 @@
 
         <div class="section-title">
           <h2>Pricing</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
 
           <div class="col-lg-4 col-md-6" data-aos="zoom-im" data-aos-delay="100">
             <div class="box">
-              <h3>Free</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
+              <h3>Silver</h3>
+              <h4><sup>₦</sup>660.00<span> / response</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Min. order 500 responses</li>
+                <li>Max. order 2500 responses </li>
+                <li>Delivered as raw data in Excelsheet</li>
+                <li>10 questions per project</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="{{ url_for('account.register') }}" class="btn-buy">Start Project</a>
               </div>
             </div>
           </div>
-
+          <div class="col-lg-4 col-md-6" data-aos="zoom-im" data-aos-delay="100">
+            <div class="box">
+              <h3>Gold</h3>
+              <h4><sup>₦</sup>900<span> / response</span></h4>
+              <ul>
+                <li>Min. order 500 responses</li>
+                <li>Max. order 2500 responses </li>
+                <li>Delivered as analyzed data in Charts & Raw data</li>
+                <li>10 questions per project</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="{{ url_for('account.register') }}" class="btn-buy">Start Project</a>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="100">
             <div class="box featured">
-              <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <h3>Platinum</h3>
+              <h4><sup>₦</sup>1200<span> / response</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Min. order 250 responses</li>
+                <li>Max. order 2500 responses </li>
+                <li>Delivered as analyzed data in a report, raw rata, infographic</li>
+                <li>10 questions per project</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="{{ url_for('account.register') }}" class="btn-buy">Start Project</a>
               </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="100">
-            <div class="box">
-              <h3>Developer</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
-              </div>
-            </div>
-          </div>
-
         </div>
 
       </div>
@@ -407,7 +364,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-1">How does it work? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-parent=".faq-list">
                 <p>
-                  If you are interested in using our online service to conduct a market or product research, you create an account online, add questions and answer options, we take yur questions and contact respondents either face to face or via phone interviews or group sessions. We get answers, analyze them and send to you. 
+                  If you are interested in using our online service to conduct a market or product research in {{ city }}, you create an account online, add questions and answer options, we take yur questions and contact respondents either face to face or via phone interviews or group sessions. We get answers, analyze them and send to you. 
                 </p>
               </div>
             </li>
@@ -443,7 +400,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-5" class="collapsed">Why do organizations have to register and create questions online? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-5" class="collapse" data-parent=".faq-list">
                 <p>
-                  We are working to make the ordering process seemless for International and Nigerian based clients. This means that we take orders online only. It also allows us to introduce future upgrades where those respondents login online to answer questions. We want to digitize the process end to end, this will enable us increase the size of the data gathered.
+                  We are working to make the ordering process seemless for International and {{ city }} based clients. This means that we take orders online only. It also allows us to introduce future upgrades where those respondents login online to answer questions. We want to digitize the process end to end, this will enable us increase the size of the data gathered.
                 </p>
               </div>
             </li>
@@ -456,7 +413,7 @@
               </div>
             </li>
             <li data-aos="fade-up" data-aos-delay="600">
-              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-5" class="collapsed">What are steps to take when conducting MarketResearch in Nigeria? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-5" class="collapsed">What are steps to take when conducting MarketResearch in {{ city }}? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-5" class="collapse" data-parent=".faq-list">
                 <p>
                   Market research can be conducted by different types of organizations. It doesn't always have to be for profit organizations only. Here are high level steps involved: 
@@ -532,10 +489,12 @@
             <h3>{{ config.APP_NAME }}</h3>
             <p>
               Coverage Areas: <br>
-              South West - Nigeria<br>
-              South East - Nigeria
-			  South South - Nigeria	<br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
+			  North East<br>
+			  North Central<br>
+			  North West<br>
+              South West <br>
+              South East<br>
+			  South South 	<br>
               <strong>Email:</strong> office@marketresearch.com.ng<br>
             </p>
           </div>
